# LLM_DEMO

./: .dockerignore  .env.example  .gitignore  Dockerfile  LLM_VISIBILITY_PLAN.md  SAAS_ROADMAP.md  celerybeat-schedule  docker-compose.dev.yml  docker-compose.yml  docker-entrypoint.sh  nginx.conf  pyproject.toml  railway.toml  run_llm_fonbet.py  run_llm_test.py  supervisord.conf
.github/workflows/: ci.yml
alembic/: env.py
app/: main.py
app/analysis/: __init__.py  pipeline.py  (+12 more)
static/: charts.js  style.css
templates/: account.html  api_keys.html  base.html  competitors.html  dashboard.html  export.html  geo_command_center.html  llm_dashboard.html  llm_debug.html  llm_onboarding.html  login.html  project.html  project_settings.html  prompts.html  settings.html  users.html
tests/: conftest.py  test_account.py  test_analysis_citations.py  test_analysis_context_evaluator.py  test_analysis_entity_resolver.py  test_analysis_pipeline.py  test_analysis_preprocessor.py  test_analysis_ranking.py  test_analysis_scoring.py  test_analysis_types.py  test_api_keys.py  test_auth.py  test_bi_dashboard_api.py  test_bi_service.py  test_brand_research.py  test_celery_dispatcher.py  test_dashboard.py  test_dispatch_integration.py  test_entity_clusterer.py  test_entity_consolidator.py  test_entity_profiler.py  test_entity_vectorizer.py  test_export.py  test_gateway.py  test_keywords_api.py  test_llm_analyzer.py  test_llm_entity_extractor.py  test_llm_queries_api.py  test_llm_results_api.py  test_plan_limits.py  test_projects.py  test_prompt_engine.py  test_regions.py  test_retention.py  test_serp_api.py  test_users.py  test_web_routes.py  test_webmaster_api.py
(+143 files in other folders)
